Fix newscard image cropping

--- a/frontend/src/pages/Home/home.css
+++ b/frontend/src/pages/Home/home.css
@@ -529,12 +529,17 @@ p.about-socials-label {
 }
 
 
-.news-cards img {
+.news-img-wrapper {
     width: 360px;
-    height: 100%;
-    object-fit: cover;
     flex-shrink: 0;
     align-self: stretch;
+}
+
+.news-img-wrapper img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    display: block;
 }
 
 .news-content {
@@ -632,7 +637,7 @@ p.about-socials-label {
         grid-template-columns: repeat(2, 1fr);
     }
 
-    .news-cards img {
+    .news-img-wrapper {
         width: 300px;
     }
 }
@@ -680,7 +685,7 @@ p.about-socials-label {
         flex-direction: column;
     }
 
-    .news-cards img {
+    .news-img-wrapper {
         width: 100%;
         height: 260px;
     }
